deploy/k8s/19-api-service.yaml
# applied before API deployment so the AWS load balancer controller can create the targetgroup
# binding before API pods are craeted
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: fdr
  labels:
    app: api
  # use AWS load balancer to provision an internet facing NLB
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    # send traffic directly to pod IPS
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    # preserve the original client IP for per-client rate limiting
    service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: "preserve_client_ip.enabled=true"
    # only route trafficto pods that pass the application readiness check
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: "HTTP"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: "/ready"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "traffic-port"
    # Optional TLS termination at the NLB
    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-2:ACCOUNT_ID:certificate/REPLACE_WITH_CERT_ID"
    # service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 8000
    # - name: https          
    #   port: 443
    #   targetPort: 8000
